--- a/vocab.html
+++ b/vocab.html
@@ -60,7 +60,8 @@
 
             <nav>
                     <div id="logo">Vocab Practice</div>
-            
+                    <label for="drop" class="toggle">Menu</label>
+
                     <input type="checkbox" id="drop" />
                         <ul class="menu">
                             <li>
